# ALogger

./: .gitignore  CMakeLists.txt
ALogger/: CMakeLists.txt
ALogger/include/: ALogger.h  FileManager.h  config.h
ALogger/src/: ALogger.cpp  FileManager.cpp
Test/: CMakeLists.txt  main.cpp
